--- a/websites/mainpage/scss/main.css
+++ b/websites/mainpage/scss/main.css
@@ -1,54 +1,34 @@
-* {
-  margin: 0;
-  padding: 0;
+@import url("https://fonts.googleapis.com/css?family=Fira+Sans");
+#container {
+  width: 100%;
 }
 
 body {
   font-family: "Gill Sans", "Gill Sans MT";
-  background: linear-gradient(to right bottom, #1675b4 10%, #50adc4);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  color: #eee;
-}
-
-header {
-  height: 450px;
-  background-image: url(../../../img/Fortnite_Titelbild-640x360.jpg);
+  background: linear-gradient(to right bottom, #1675b4 5%, #50adc4);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
 
-nav ul {
+nav {
   display: flex;
-  flex-direction: row;
-  list-style-type: none;
-  justify-content: center;
-  align-content: center;
+  flex-wrap: wrap;
+  flex-direction: column;
+  background-image: url(../../../img/fortnite-icegif-34.gif);
+  background-position: top center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  top: 0;
+  width: 100%;
 }
-nav ul li {
-  flex-basis: 1;
+nav h2 {
   padding: 10px;
-  font-size: 1.2rem;
-  text-align: center;
-}
-nav ul li:hover {
-  background-color: #65a3ff;
-  color: #59276c;
-  font-weight: bold;
   font-size: 1.4rem;
-  text-decoration: none;
-}
-nav ul li a {
-  color: inherit;
-  text-decoration: none;
+  text-align: center;
+  color: #061528;
 }
 nav h1 {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-content: center;
   padding: 15px;
   margin-bottom: 4px;
   margin-top: 4px;
@@ -56,108 +36,38 @@ nav h1 {
   text-align: center;
   font-weight: bold;
   color: #101010;
-  text-shadow: 2px 2px 3px gray;
+  text-shadow: 2px 2px 3px #65a3ff;
 }
-nav h2 {
+nav ul {
   display: flex;
   flex-direction: row;
+  list-style-type: none;
+  text-align: center;
   justify-content: center;
   align-content: center;
-  padding: 10px;
-  font-size: 1.2rem;
-  text-align: center;
+  list-style-type: none;
+  list-style-type: none;
+  margin: 0;
+  padding: 15px;
 }
-
-main {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  padding-left: 50px;
-  padding-right: 50px;
-  padding-top: 30px;
-  padding-bottom: 30px;
+nav ul li {
+  display: inline;
+  font-family: "Fira Sans", sans-serif;
+  font-size: 17px;
 }
-main div {
-  padding-left: 50px;
-  padding-right: 50px;
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-
-#crossover {
-  height: 300px;
-  border-radius: 15px;
-  padding-left: auto;
-  padding-right: auto;
-}
-
-.tovabbi-list {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  margin-left: 1em;
-  margin-right: 1em;
-}
-
-.tovabbi-list .item {
-  display: flex;
-  flex-direction: column;
-  background-color: #59276c;
-  margin: 1em;
-  padding: 1em;
-  border-radius: 1em;
-  box-shadow: rgba(0, 0, 0, 0.2) 3px 3px 18px;
-  flex-grow: 1;
-  flex-shrink: 1;
-  flex-basis: 1em;
-}
-
-.item .head {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-content: flex-end;
-}
-
-h3 {
-  margin: 0px;
-}
-
-.item a {
-  background-color: rgb(29, 185, 84);
-  color: white;
-  font-weight: bold;
-  text-align: center;
-  width: 80%;
-  border: 1px solid white;
-  border-radius: 3em;
-  line-height: 3em;
-  margin-left: 1em;
-  margin-right: 1em;
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
+nav ul li a {
+  color: #070523;
   text-decoration: none;
-  text-transform: uppercase;
-  align-self: center;
-  justify-self: center;
+  padding: 14px;
+}
+nav ul li a:hover {
+  background-color: #65a3ff;
+  color: #59276c;
+  font-weight: bold;
+  font-size: 1.4rem;
+  text-decoration: none;
 }
 
-ul {
-  flex-grow: 1;
-}
-
-.item {
-  flex-basis: 100%;
-}
-
-@media (min-width: 576px) {
-  .item {
-    flex-basis: 300px;
-  }
-}
-@media (min-width: 1200px) {
-  .item {
-    flex-basis: 20%;
-  }
+.content {
+  text-align: center;
 }/*# sourceMappingURL=main.css.map */
